CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_SUBDIRECTORY(googletest)

SET(CMAKE_CXX_STANDARD 11)
SET(PROJECT_SOURCE_DIR "${PROJECT_SOURCE_DIR}/unit_tests")
SET(PROJECT_BINARY_DIR "${PROJECT_BINARY_DIR}/src")
ADD_EXECUTABLE(test
	${PROJECT_SOURCE_DIR}/unit_test.cpp
	${PROJECT_BINARY_DIR}/Command.cpp
	${PROJECT_BINARY_DIR}/Base.cpp
	${PROJECT_BINARY_DIR}/And.cpp
	${PROJECT_BINARY_DIR}/Or.cpp
	${PROJECT_BINARY_DIR}/Semicolon.cpp
	${PROJECT_BINARY_DIR}/Paren.cpp
	${PROJECT_BINARY_DIR}/OutputReClear.cpp
	${PROJECT_BINARY_DIR}/OutputReApp.cpp
	${PROJECT_BINARY_DIR}/InputRe.cpp
	${PROJECT_BINARY_DIR}/Pipe.cpp
)

ADD_EXECUTABLE(rshell
	${PROJECT_BINARY_DIR}/main.cpp
	${PROJECT_BINARY_DIR}/Command.cpp
        ${PROJECT_BINARY_DIR}/Base.cpp
        ${PROJECT_BINARY_DIR}/And.cpp
        ${PROJECT_BINARY_DIR}/Or.cpp
        ${PROJECT_BINARY_DIR}/Semicolon.cpp
	${PROJECT_BINARY_DIR}/Paren.cpp
	${PROJECT_BINARY_DIR}/OutputReClear.cpp
	${PROJECT_BINARY_DIR}/OutputReApp.cpp
	${PROJECT_BINARY_DIR}/InputRe.cpp
	${PROJECT_BINARY_DIR}/Pipe.cpp
)
	
TARGET_LINK_LIBRARIES(test gtest)
TARGET_COMPILE_DEFINITIONS(test PRIVATE gtest_disable_pthreads=ON)
